[ZEPPELIN-2460] Highlight active line in editor
### What is this PR for?

Highlight active line.

### What type of PR is it?
[Improvement]

### Todos
* [x] - Added ui-ace option
* [x] - Fix css for paragraph control not to be overrided by active line

### What is the Jira issue?

[ZEPPELIN-2460](https://issues.apache.org/jira/browse/ZEPPELIN-2460)

### How should this be tested?

1. Build: `mvn clean package -DskipTests; ./bin/zeppelin-daemon.sh restart`
2. Open a note and write some text.

### Screenshots (if appropriate)

![2460_active_line](https://cloud.githubusercontent.com/assets/4968473/26279598/de38b114-3df2-11e7-9d3a-f0d4f59b8cd1.gif)

### Questions:
* Does the licenses files need update? - NO
* Is there breaking changes for older versions? - NO
* Does this needs documentation? - NO

Author: 1ambda <1amb4a@gmail.com>

Closes #2356 from 1ambda/ZEPPELIN-2460/highlight-active-line and squashes the following commits:

2809093 [1ambda] fix: xpath for select, checkbox DOM
087942b [1ambda] fix: Use ng-if for title
e60f9a2 [1ambda] feat: Display title, control in the same line
bfa2fed [1ambda] fix: Set active line when note is created
ade9179 [1ambda] fix: Use blue-light color for active line
0366948 [1ambda] fix: Show single active line in a note
dfcb8aa [1ambda] fix: Control setting CSS not to overwrite active line
6424db5 [1ambda] feat: Highlight active line in editor

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.css
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.css
@@ -113,7 +113,6 @@
   display: none;
   float: right;
   color: #999;
-  margin-top: -9px;
   margin-right: 0;
   position: absolute;
   clear: both;
@@ -175,18 +174,12 @@
 }
 
 .paragraph .control {
-  background: rgba(255,255,255,0.85);
+  display: inline-block;
   float: right;
+  background: rgba(255,255,255,0.85);
   color: #999;
-  margin-top: 1px;
-  margin-right: 5px;
-  position: absolute;
-  clear: both;
-  right: 15px;
-  top: 16px;
-  text-align: right;
   font-size: 12px;
-  padding: 4px;
+  margin-top: 5px;
 }
 
 .paragraph .control li {
@@ -275,8 +268,11 @@ table.table-shortcut {
 */
 
 .paragraph .title {
-  margin: 0;
+  display: inline-block;
+  float: left;
   font-size: 12px;
+  margin-bottom: 7px;
+  min-height: 24px;
 }
 
 .paragraph .title div {
@@ -370,8 +366,20 @@ table.table-shortcut {
   direction: ltr;
 }
 
+/** set highlight line color */
+#main .ace-chrome .ace_marker-layer .ace_active-line {
+  background: rgba(114, 127, 222, 0.08);
+}
+
+/** hide not focused cursors */
 .ace_hidden-cursors {
   opacity: 0;
+}
+
+/** set cursor color */
+#main .emacs-mode .ace_cursor {
+  background: #C0C0C0!important;
+  border: none !important;
 }
 
 .ace_text-input, .ace_gutter, .ace_layer,
@@ -382,11 +390,6 @@ table.table-shortcut {
 
 .ace_text-input.ace_composition {
  opacity: 0 !important;
-}
-
-#main .emacs-mode .ace_cursor {
-  background: #C0C0C0!important;
-  border: none !important;
 }
 
 /*
