--- a/zeppelin-web/src/app/interpreter/interpreter-create/interpreter-create.html
+++ b/zeppelin-web/src/app/interpreter/interpreter-create/interpreter-create.html
@@ -278,17 +278,17 @@ limitations under the License.
             <tr ng-repeat="key in newInterpreterSetting.properties | sortByKey">
               <td>{{key}}</td>
               <td style="vertical-align: middle;">
-                <textarea ng-if="newInterpreterSetting.properties[key].widget === 'textarea' && newInterpreterSetting.properties[key].type === 'string'"
+                <textarea ng-if="newInterpreterSetting.properties[key].type === 'textarea'"
                           msd-elastic ng-model="newInterpreterSetting.properties[key].value"></textarea>
-                <input ng-if="newInterpreterSetting.properties[key].widget === 'input' && newInterpreterSetting.properties[key].type === 'string'"
+                <input ng-if="newInterpreterSetting.properties[key].type === 'string'"
                        type="text" msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
-                <input ng-if="newInterpreterSetting.properties[key].widget === 'input' && newInterpreterSetting.properties[key].type === 'number'"
+                <input ng-if="newInterpreterSetting.properties[key].type === 'number'"
                        type="text" widget-number msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
-                <input ng-if="newInterpreterSetting.properties[key].widget === 'input' && newInterpreterSetting.properties[key].type === 'url'"
+                <input ng-if="newInterpreterSetting.properties[key].type === 'url'"
                        type="text" msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
-                <input ng-if="newInterpreterSetting.properties[key].widget === 'password' && newInterpreterSetting.properties[key].type === 'password'"
+                <input ng-if="newInterpreterSetting.properties[key].type === 'password'"
                        type="password" msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
-                <input ng-if="newInterpreterSetting.properties[key].widget === 'checkbox' && newInterpreterSetting.properties[key].type === 'boolean'"
+                <input ng-if="newInterpreterSetting.properties[key].type === 'boolean'"
                        type="checkbox" msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
               </td>
               <td style="vertical-align: middle;">
@@ -305,7 +305,7 @@ limitations under the License.
                 <input pu-elastic-input pu-elastic-input-minwidth="180px"
                        ng-model="newInterpreterSetting.propertyKey" />
               </td>
-              <td style="vertical-align: middle;" ng-switch on="newInterpreterSetting.propertyWidget.id">
+              <td style="vertical-align: middle;" ng-switch on="newInterpreterSetting.propertyType">
                 <textarea ng-switch-default msd-elastic ng-model="newInterpreterSetting.propertyValue"></textarea>
                 <input ng-switch-when="string" type="text" msd-elastic ng-model="newInterpreterSetting.propertyValue" />
                 <input ng-switch-when="number" type="text" widget-number msd-elastic ng-model="newInterpreterSetting.propertyValue" />
@@ -314,8 +314,8 @@ limitations under the License.
                 <input ng-switch-when="checkbox" type="checkbox" msd-elastic ng-model="newInterpreterSetting.propertyValue" />
               </td>
               <td style="vertical-align: middle;">
-                <select msd-elastic ng-model="newInterpreterSetting.propertyWidget" ng-init="newInterpreterSetting.propertyWidget=interpreterPropertyWidgets[0]"
-                        ng-options="item.id for item in interpreterPropertyWidgets" ng-change="defaultValueByWidget(newInterpreterSetting)">
+                <select msd-elastic ng-model="newInterpreterSetting.propertyType" ng-init="newInterpreterSetting.propertyType=interpreterPropertyTypes[0]"
+                        ng-options="item for item in interpreterPropertyTypes" ng-change="defaultValueByType(newInterpreterSetting)">
                 </select>
                 <button class="btn btn-default btn-sm fa fa-plus" ng-click="addNewInterpreterProperty()">
                 </button>
