--- a/zeppelin-web/src/app/interpreter/interpreter.html
+++ b/zeppelin-web/src/app/interpreter/interpreter.html
@@ -401,27 +401,27 @@ limitations under the License.
           <tr ng-repeat="key in setting.properties | sortByKey" >
             <td style="vertical-align: middle;">{{key}}</td>
             <td style="vertical-align: middle;">
-              <span ng-if="setting.properties[key].widget === 'textarea' && setting.properties[key].type === 'string'"
+              <span ng-if="setting.properties[key].type === 'textarea'"
                     editable-textarea="setting.properties[key].value" e-form="valueform" e-msd-elastic>
                  {{setting.properties[key].value | breakFilter}}
               </span>
-              <span ng-if="setting.properties[key].widget === 'input' && setting.properties[key].type === 'string'"
+              <span ng-if="setting.properties[key].type === 'string'"
                     editable-text="setting.properties[key].value" e-form="valueform" e-msd-elastic>
                 {{setting.properties[key].value}}
               </span>
-              <span ng-if="setting.properties[key].widget === 'input' && setting.properties[key].type === 'number'"
+              <span ng-if="setting.properties[key].type === 'number'"
                     editable-text="setting.properties[key].value" e-widget-number e-form="valueform" e-msd-elastic>
                 {{setting.properties[key].value}}
               </span>
-              <span ng-if="setting.properties[key].widget === 'input' && setting.properties[key].type === 'url'"
+              <span ng-if="setting.properties[key].type === 'url'"
                     editable-text="setting.properties[key].value" e-form="valueform" e-msd-elastic>
                 <a ng-href="{{setting.properties[key].value}}">{{setting.properties[key].value}}</a>
               </span>
-              <span ng-if="setting.properties[key].widget === 'password' && setting.properties[key].type === 'password'"
+              <span ng-if="setting.properties[key].type === 'password'"
                     editable-password="setting.properties[key].value" e-form="valueform" e-msd-elastic>
                 {{setting.properties[key].value ? '***' : ''}}
               </span>
-              <span ng-if="setting.properties[key].widget === 'checkbox' && setting.properties[key].type === 'boolean'"
+              <span ng-if="setting.properties[key].type === 'checkbox'"
                     editable-checkbox="setting.properties[key].value" e-form="valueform" e-msd-elastic>
                 {{setting.properties[key].value}}
               </span>
@@ -438,7 +438,7 @@ limitations under the License.
                      pu-elastic-input pu-elastic-input-minwidth="180px" />
             </td>
 
-            <td style="vertical-align: middle;" ng-switch on="setting.propertyWidget.id">
+            <td style="vertical-align: middle;" ng-switch on="setting.propertyType">
               <textarea ng-switch-default msd-elastic ng-model="setting.propertyValue"></textarea>
               <input ng-switch-when="string" type="text" msd-elastic ng-model="setting.propertyValue"/>
               <input ng-switch-when="number" type="text" msd-elastic ng-model="setting.propertyValue" widget-number />
@@ -447,8 +447,8 @@ limitations under the License.
               <input ng-switch-when="checkbox" type="checkbox" msd-elastic ng-model="setting.propertyValue" />
             </td>
             <td style="vertical-align: middle;">
-              <select ng-model="setting.propertyWidget" ng-init="setting.propertyWidget=interpreterPropertyWidgets[0]"
-                      ng-options="item.id for item in interpreterPropertyWidgets" ng-change="defaultValueByWidget(setting)">
+              <select ng-model="setting.propertyType" ng-init="setting.propertyType=interpreterPropertyTypes[0]"
+                      ng-options="item for item in interpreterPropertyTypes" ng-change="defaultValueByType(setting)">
               </select>
 
               <button class="btn btn-default btn-sm fa fa-plus"
