feat: Style collapsed nav for mobile browser

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -147,6 +147,7 @@
                 <li><a href="{{BASE_PATH}}/development/writingzeppelinspell.html">Writing Helium Spell</a></li>
                 <li><a href="{{BASE_PATH}}/development/writingzeppelinvisualization.html">Writing Helium Visualization: Basics</a></li>
                 <li><a href="{{BASE_PATH}}/development/writingzeppelinvisualization_transformation.html">Writing Helium Visualization: Transformation</a></li>
+                <li role="separator" class="divider"></li>
                 <li class="title"><span>Contributing to Zeppelin</span></li>
                 <li><a href="{{BASE_PATH}}/development/howtocontribute.html">How to Contribute (code)</a></li>
                 <li><a href="{{BASE_PATH}}/development/howtocontributewebsite.html">How to Contribute (website)</a></li>
