feat: Update doc section names

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -26,11 +26,11 @@
                 <li class="title"><span>Getting Started</span></li>
                 <li><a href="">Install</a></li>
                 <li><a href="">Tutorial</a></li>
-                <li><a href="">Explore Zeppelin UI</a></li>
+                <li><a href="">Explore UI</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="">Spark</a></li>
-                <li><a href="">SQL</a></li>
-                <li><a href="">Python</a></li>
+                <li><a href="">Spark with Zeppelin</a></li>
+                <li><a href="">SQL with Zeppelin</a></li>
+                <li><a href="">Python with Zeppelin</a></li>
               </ul>
             </li>
 
@@ -73,6 +73,7 @@
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Setup<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li class="title"><span>Basics</span></li>
+                <li><a href="">How to Build Zeppelin</a></li>
                 <li><a href="">Multi-user Support</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>Setup Zeppelin on Cluster</span></li>
@@ -152,6 +153,11 @@
                 <li class="title"><span>Contributing to Zeppelin</span></li>
                 <li><a href="{{BASE_PATH}}/development/howtocontribute.html">How to Contribute (code)</a></li>
                 <li><a href="{{BASE_PATH}}/development/howtocontributewebsite.html">How to Contribute (website)</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="title"><span>External Resources</span></li>
+                <li><a target="_blank" href="">Mailing List</a></li>
+                <li><a target="_blank" href="">Apache Zeppelin Wiki</a></li>
+                <li><a target="_blank" href="">Stackoverflow Questions about Zeppelin</a></li>
               </ul>
             </li>
             <li>
